tests/samplefiles/text_sample_ascii.txt

BEOWULF.




I.

THE LIFE AND DEATH OF SCYLD.


{The famous race of Spear-Danes.}

          Lo! the Spear-Danes' glory through splendid achievements
          The folk-kings' former fame we have heard of,
          How princes displayed then their prowess-in-battle.

{Scyld, their mighty king, in honor of whom they are often called
Scyldings. He is the great-grandfather of Hrothgar, so prominent in the
poem.}

          Oft Scyld the Scefing from scathers in numbers
        5 From many a people their mead-benches tore.
          Since first he found him friendless and wretched,
          The earl had had terror: comfort he got for it,
          Waxed 'neath the welkin, world-honor gained,
          Till all his neighbors o'er sea were compelled to
       10 Bow to his bidding and bring him their tribute:
          An excellent atheling! After was borne him

{A son is born to him, who receives the name of Beowulf--a name afterwards
made so famous by the hero of the poem.}


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Source for the following text: http://www.heorot.dk/beowulf-rede-text.html

Listen! We --of the Spear-Danes      in the days of yore,
of those clan-kings--      heard of their glory.
how those nobles      performed courageous deeds.

Hwt! W Grdena      in gardagum
odcyninga      rym gefrnon
h  elingas      ellen fremedon.

------------------------------------------------------------------------------

Oft Scyld Scfing      sceaena ratum	
Often Scyld, Scef's son,      from enemy hosts
monegum magum      meodosetla oftah	
from many peoples      seized mead-benches;
egsode Eorle      syan arest wear	
and terrorised the fearsome Heruli      after first he was
fasceaft funden      h s frfre gebd	
found helpless and destitute,      he then knew recompense for that:-
wox under wolcnum      weormyndum h	
he waxed under the clouds,      throve in honours,
o t him aghwylc      ra ymbsittendra	
until to him each      of the bordering tribes
ofer hronrde      hran scolde,	
beyond the whale-road      had to submit,
gomban gyldan      t ws gd cyning.	
and yield tribute:-      that was a good king!
